# spotify-desktop-pet

./: .gitignore  README.md  build_exe.bat  pyproject.toml  requirements.txt
src/: __init__.py  bubble.py  config.py  lyrics.py  main.py  media_monitor.py  particles.py  pet.py  themes.py
